--- a/packages/SystemUI/res/layout/status_bar_wifi_group_inner.xml
+++ b/packages/SystemUI/res/layout/status_bar_wifi_group_inner.xml
@@ -46,7 +46,8 @@
                 android:adjustViewBounds="true"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_down"
-                android:paddingEnd="2dp"
+                android:paddingTop="2.5dp"
+                android:paddingEnd="2.5dp"
             />
             <ImageView
                 android:id="@+id/wifi_out"
@@ -54,7 +55,8 @@
                 android:adjustViewBounds="true"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_up"
-                android:paddingEnd="2dp"
+                android:paddingTop="2.5dp"
+                android:paddingEnd="2.5dp"
             />
         </FrameLayout>
         <FrameLayout
